# Hopper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_Windows.md  build.sh  clippy.toml  hopper  rustfmt.toml
.ci/: ci.yaml
examples/: .gitignore  README.md
examples/c-ares/: custom.rule  hopper.config
examples/cjson/: hopper.config
examples/lcms2/: custom.rule  hopper.config
examples/libaom/: aom_all.h  av1_dev_fuzzer.dict  custom.rule  hopper.config
examples/libmagic/: custom.rule  hopper.config
examples/libpcap/: custom.rule  hopper.config
examples/libpcap/seeds/: 1.txt  2.txt  4.txt
examples/libpng/: custom.rule  hopper.config
examples/liburing/: hopper.config
examples/libvpx/: custom.rule  hopper.config  vpx.dict  vpx_all.h
examples/pcre2/: custom.rule  hopper.config
examples/re2/: custom.rule  hopper.config
examples/sqlite3/: custom.rule  hopper.config
examples/zlib/: custom.rule  hopper.config
hopper-compiler/: Cargo.toml
hopper-compiler/src/: binary_info.rs  cargo.rs  check.rs  config.rs  main.rs
hopper-compiler/src/dwarf/: analyzer.rs  arg_type.rs  function.rs  mod.rs  position.rs  program.rs  variable.rs
hopper-compiler/src/patch/: e9.rs  mod.rs  patchelf.rs
hopper-core/: Cargo.toml  asm.S  build.rs
hopper-core/src/: config.rs  error.rs  fuzzer.rs  lib.rs  slices.rs  test.rs  utils.rs
hopper-core/src/depot/: io.rs  mod.rs  priority.rs  select.rs
hopper-core/src/execute/: executor.rs  forkcli.rs  forklib_win.rs  forksrv.rs  io_utils.rs  limit.rs  mod.rs  signal.rs
hopper-core/src/feedback/: branches.rs  cmp.rs  hook.rs  instr.rs  mem.rs  mod.rs  observer.rs  ops.rs  path.rs  res.rs  review.rs  sanitize.rs  shm.rs  shm_win.rs
hopper-core/src/feedback/globl/: e9-globl-win.S  llvm-globl.c  mod.rs  variadic.c
hopper-core/src/fuzz/: check.rs  det.rs  effective.rs  find.rs  flag.rs  generate.rs  minimize.rs  mod.rs  mutate.rs  operator.rs  pcg.rs  refine.rs  rng.rs  weight.rs
hopper-core/src/fuzz/constraints/: constraint.rs  context.rs  entry.rs  internal.rule  literal.rs  mod.rs  parse.rs  ret.rs  role.rs
hopper-core/src/fuzz/infer/: array.rs  cast.rs  context.rs  file.rs  length.rs  mod.rs  non_null.rs  opaque.rs  res.rs  sigfpe.rs
hopper-core/src/fuzz/object/: bitfield.rs  buf.rs  corpus.rs  fn_pointer.rs  mod.rs  number.rs  option.rs  pointer.rs  seq.rs  void.rs
hopper-core/src/fuzz/stmt/: assert.rs  call.rs  file.rs  load.rs  mod.rs  update.rs
hopper-core/src/runtime/: func.rs  gadgets.rs  loc.rs  mod.rs  program.rs  serde.rs  translate.rs
hopper-core/src/runtime/object/: bitfield.rs  builder.rs  canary.rs  fn_pointer.rs  layout.rs  mod.rs  number.rs  option.rs  pointer.rs  seq.rs  state.rs  void.rs
hopper-core/src/runtime/stmt/: assert.rs  call.rs  file.rs  index.rs  load.rs  mod.rs  update.rs
hopper-derive/: Cargo.toml
hopper-derive-impl/: Cargo.toml
hopper-derive-impl/src/: field.rs  folder.rs  format.rs  func_hook.rs  func_sig.rs  lib.rs  object.rs  serde.rs  visitor.rs
hopper-derive/src/: lib.rs
hopper-harness/: Cargo.toml  build.rs
hopper-harness/src/: lib.rs
hopper-instrument/e9-mode/: README.md  build.sh  config.h  e9patch.diff  hopper-e9-plugin.cpp  hopper-e9-rt.c  hopper-instr-plugin.cpp  rt-linux.c  rt-win.c
hopper-instrument/llvm-mode/: .gitignore  CMakeLists.txt  Makefile  Readme.md  hopper-clang.c  hopper-early-pass.cc  hopper-llvm-pass.cc  hopper-llvm-rt.c  hopper-pass.cc  hopper-pre-pass.cc
hopper-instrument/llvm-mode/include/: alloc_inl.h  config.h  debug.h
testsuite/: README.md  common.h  test.sh
testsuite/assert/: assert.c  assert.h  custom.rule
testsuite/basic/: basic.c  basic.h  custom.rule
testsuite/buf/: buf.c  buf.h  dict
testsuite/buf/seeds/@buf/: buf.txt
testsuite/constraint/: constraint.c  constraint.h
testsuite/pointer/: custom.rule  pointer.c  pointer.h
testsuite/strcmp/: strcmp.c  strcmp.h
tools/: core_affinity.sh  style.sh
